# self-supervised-conformal-prediction

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  environment.yml  pyproject.toml  requirements-deepinv-legacy.txt  requirements-minimal.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  reproduction_question.md
.github/workflows/: tests.yml
configs/: gaussian_deblurring_sure.yaml  gaussian_denoising_sure.yaml  poisson_deblurring_pure.yaml  poisson_denoising_pure.yaml
docs/: API_OVERVIEW.md  AUDIT.md  CHECKPOINTS.md  CODE_PAPER_ALIGNMENT.md  DATASETS.md  FORMULAS_AND_CONVENTIONS.md  PAPER_REPRODUCTION.md  PUBLIC_RELEASE_CHECKLIST.md  REPRODUCIBILITY.md
examples/: minimal_toy_gaussian.py  minimal_toy_poisson.py
legacy_notes/: archive_summary.json  environment_sure_pure.original  requirements_pure_sure.original.txt  requirements_uploaded.original.txt  source_tree.txt
notebooks/: demo_conformal_sets.ipynb
paper_assets/: MANIFEST.json  README.md
paper_assets/poisson_ssp2025/: ACTIVE_LATEX_FIGURES.txt
paper_assets/sure_ssvm2025/: ACTIVE_LATEX_FIGURES.txt
results/reference/: MANIFEST.json
scripts/: calibrate_conformal.py  check_install.py  evaluate_coverage.py  generate_measurements.py  make_figures_from_scores.py  reproduce_reference_figures.py  train.py  train_pure.py  train_sure.py
src/sscp/: __init__.py  cli.py
src/sscp/losses/: pure.py  (+3 more)
tests/: test_conformal_set.py  test_quantiles.py  test_scores.py  test_sure_pure_shapes.py  test_toy_datasets.py
(+25 files in other folders)
